--- a/tweet_app/templates/tweet_app/home.html
+++ b/tweet_app/templates/tweet_app/home.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="d-flex flex-column overflow-auto" style="height:750px; width:600px;" >
-          {% for tweet in tweets %}
+          {% for tweet in tweets reversed%}
           <div class="card rounded shadow">
             <div class="card-header">
               <div class="d-flex justify-content-start">
@@ -74,7 +74,78 @@
               </div>
               <img src="{{tweet.image.url}}" style="width:100%;"/>
             </div>
-            <div class="card-footer"></div>
+            <div class="card-footer">
+              <div class="d-flex post-actions">
+                <a
+                  href="javascript:;"
+                  class="d-flex align-items-center text-muted mx-4"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="feather feather-heart icon-md mb-0"
+                  >
+                    <path
+                      d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
+                    ></path>
+                  </svg>
+                  <p class="d-none d-md-block mx-1 my-2">Like</p>
+                </a>
+                <a
+                  href="javascript:;"
+                  class="d-flex align-items-center text-muted mx-4"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="feather feather-message-square icon-md mb-0"
+                  >
+                    <path
+                      d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
+                    ></path>
+                  </svg>
+                  <p class="d-none d-md-block mx-1 my-2">Comment</p>
+                </a>
+                <a
+                  href="javascript:;"
+                  class="d-flex align-items-center text-muted mx-4"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="feather feather-share icon-md mb-0"
+                  >
+                    <path
+                      d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"
+                    ></path>
+                    <polyline points="16 6 12 2 8 6"></polyline>
+                    <line x1="12" y1="2" x2="12" y2="15"></line>
+                  </svg>
+                  <p class="d-none d-md-block mx-1 my-2">Share</p>
+                </a>
+              </div>
+            </div>
           </div>
           {% endfor %}
         </div>
