--- a/tweet_app/templates/tweet_app/home.html
+++ b/tweet_app/templates/tweet_app/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +10,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <style>
       /* Custom CSS for thin lines */
       .username {
@@ -19,11 +21,24 @@
         margin: 15px;
       }
 
+      .high_light {
+        color: red;
+      }
+
       /* .scroll {
         height:450px;
         overflow-y: scroll;
       } */
     </style>
+
+    <script>
+      // Capture the current scroll position
+      const scrollPosition = window.scrollY;
+
+      // Store the scroll position in local storage
+      localStorage.setItem('scrollPosition', scrollPosition);
+    </script>
+
   </head>
   <body>
     <div class="container-fluid">
@@ -76,74 +91,94 @@
             </div>
             <div class="card-footer">
               <div class="d-flex post-actions">
-                <a
-                  href="javascript:;"
-                  class="d-flex align-items-center text-muted mx-4"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="feather feather-heart icon-md mb-0"
-                  >
-                    <path
-                      d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
-                    ></path>
-                  </svg>
-                  <p class="d-none d-md-block mx-1 my-2">Like</p>
-                </a>
-                <a
-                  href="javascript:;"
-                  class="d-flex align-items-center text-muted mx-4"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="feather feather-message-square icon-md mb-0"
-                  >
-                    <path
-                      d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
-                    ></path>
-                  </svg>
-                  <p class="d-none d-md-block mx-1 my-2">Comment</p>
-                </a>
-                <a
-                  href="javascript:;"
-                  class="d-flex align-items-center text-muted mx-4"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="feather feather-share icon-md mb-0"
-                  >
-                    <path
-                      d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"
-                    ></path>
-                    <polyline points="16 6 12 2 8 6"></polyline>
-                    <line x1="12" y1="2" x2="12" y2="15"></line>
-                  </svg>
-                  <p class="d-none d-md-block mx-1 my-2">Share</p>
-                </a>
+
+
+                <form method="post" action="{% url 'buttons_clicked' pk=tweet.tweet_id %}" class="d-flex flex-row">
+                  {% csrf_token %}
+                  <div class="d-flx" id="like-button">
+                    <button
+                      type="submit"
+                      class="btn btn-link d-flex align-items-center text-muted mx-4"
+                      name="like_button_{{tweet.tweet_id}}"
+                      value="{{tweet.tweet_id}}"
+                    >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-heart icon-md mb-0"
+                        id="like-button"
+                      >
+                        <path
+                          d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
+                        ></path>
+                      </svg>
+                      <p class="d-none d-md-block mx-1 my-2">Like</p>
+                    </button>
+                  </div>
+
+                  <div class="d-flx" id="like-button">
+                    <button
+                      type="button"
+                      class="btn btn-link d-flex align-items-center text-muted mx-4"
+                      name="comment_button_{{tweet.tweet_id}}"
+                    >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-message-square icon-md mb-0"
+                      >
+                        <path
+                          d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
+                        ></path>
+                      </svg>
+                      <p class="d-none d-md-block mx-1 my-2">Comment</p>
+                    </button>
+                  </div>
+
+                  <div class="d-flx" id="like-button">
+                    <button
+                      type="button"
+                      class="btn btn-link d-flex align-items-center text-muted mx-4"
+                      name="share_button_{{tweet.tweet_id}}"
+                    >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-share icon-md mb-0"
+                      >
+                        <path
+                          d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"
+                        ></path>
+                        <polyline points="16 6 12 2 8 6"></polyline>
+                        <line x1="12" y1="2" x2="12" y2="15"></line>
+                      </svg>
+                      <p class="d-none d-md-block mx-1 my-2">Share</p>
+                    </button>
+                  </div>
+                </form>
+
+
               </div>
             </div>
           </div>
@@ -157,6 +192,7 @@
             </div>
             <div class="d-flex flex-column shadow">
               <h1>this is so good man </h1>
+              <button onclick="showCommentModal()">Click me!</button>
             </div>
           </div>
         </div>
@@ -164,12 +200,31 @@
     </div>
 
     <!-- Include Popper.js via CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@2.11.6/dist/umd/popper.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@2.11.6/dist/umd/popper.min.js"></script> -->
 
     <!-- Include Bootstrap JS via CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
     <!-- Include jQuery (required by Bootstrap) via CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script src="{% static 'js/script.js' %}" ></script>
+
+    <script>
+      function refreshPage() {
+          // Restore the scroll position
+          const storedScrollPosition = localStorage.getItem('scrollPosition');
+  
+          if (storedScrollPosition !== null) {
+              window.scrollTo(0, parseInt(storedScrollPosition, 10));
+              localStorage.removeItem('scrollPosition');
+          }
+  
+          // Initiate the page refresh
+          window.location = window.location;
+      }
+  </script>
+
+
   </body>
 </html>
