--- a/tweet_app/templates/tweet_app/home.html
+++ b/tweet_app/templates/tweet_app/home.html
@@ -56,14 +56,82 @@
             </div>
 
             <div class="d-flex flex-column mx-3">
-              <h3>Home</h3>
-              <h3>trends</h3>
-              <h3>explore</h3>
-              <h3>profile</h3>
+              <h3>
+                <a href="{% url 'home_page' %}" class="text-muted text-decoration-none">Home</a>
+              </h3>
+              <h3>
+                <a href="{% url 'home_page' %}" class="text-muted text-decoration-none">trends</a>
+              </h3>
+              <h3>
+                <a href="{% url 'home_page' %}" class="text-muted text-decoration-none">explore</a>
+              </h3>
+              <h3>
+                <a href="{% url 'profile_page' %}" class="text-muted text-decoration-none">profile</a>
+              </h3>
             </div>
 
-            <div class="d-flex justify-content-start align-items-start my-4">
-              <button class="btn btn-primary btn-lg">Primary Button</button>
+              <div class="d-flex justify-content-start align-items-start my-4">
+                <button
+                type="button"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#exampleModal"
+                data-whatever="@getbootstrap"
+              >
+                Open modal for @getbootstrap
+              </button>
+          
+              <div
+                class="modal fade"
+                id="exampleModal"
+                tabindex="-1"
+                role="dialog"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                      <button
+                        type="button"
+                        class="close"
+                        data-dismiss="modal"
+                        aria-label="Close"
+                      >
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <div class="form-group">
+                          <label for="recipient-name" class="col-form-label"
+                            >Recipient:</label
+                          >
+                          <input type="text" class="form-control" id="recipient-name" />
+                        </div>
+                        <div class="form-group">
+                          <label for="message-text" class="col-form-label"
+                            >Message:</label
+                          >
+                          <textarea class="form-control" id="message-text"></textarea>
+                        </div>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-dismiss="modal"
+                      >
+                        Close
+                      </button>
+                      <button type="button" class="btn btn-primary">Send message</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
             </div>
 
           </div>
@@ -129,6 +197,9 @@
                       type="button"
                       class="btn btn-link d-flex align-items-center text-muted mx-4"
                       name="comment_button_{{tweet.tweet_id}}"
+                      data-target="#CommentModal" 
+                      data-toggle="modal"
+                      data-whatever="@getbootstrap"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -148,6 +219,38 @@
                       </svg>
                       <p class="d-none d-md-block mx-1 my-2">Comment</p>
                     </button>
+           
+                    <div class="modal fade" id="CommentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            <form>
+                              <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">Recipient:</label>
+                                <input type="text" class="form-control" id="recipient-name">
+                              </div>
+                              <div class="form-group">
+                                <label for="message-text" class="col-form-label">Message:</label>
+                                <textarea class="form-control" id="message-text"></textarea>
+                              </div>
+                            </form>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Send Comment </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>  
+
+
+
                   </div>
 
                   <div class="d-flx" id="like-button">
@@ -209,7 +312,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
     <!-- Include jQuery (required by Bootstrap) via CDN -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script> 
 
     <script src="{% static 'js/script.js' %}" ></script>
 
