--- a/tweet_app/templates/tweet_app/profile_page.html
+++ b/tweet_app/templates/tweet_app/profile_page.html
@@ -1,9 +1,142 @@
 {% extends 'tweet_app/home.html' %}
 
 {% block content %}
+<div class="d-flex flex-column overflow-auto">
+    <div class="card shadow" style="width:700px; height:300px;">
+        <div class="d-flex flex-row justify-content-start" style="width:100%; height:100%;">
+            <div class="d-flex justify-content-center my-4 mx-5" style="width:40%;">
+                <img class="rounded" src="{{request.user.profile_picture_path.url}}" style="width:300px;"/>
+            </div>
+            <div class="d-flex flex-column my-4 rounded justify-content-between" style="width:40%; background-color: blanchedalmond;">
+                <div class="d-flex flex-column">
+                    <h2 class="mx-2 mt-2">{{request.user.name}}</h2>
+                    <h4 class="mx-2 text-muted">@{{request.user.username}}</h4>
+                    <h6 class="mx-2 text-muted">joined {{date_joined}}</h6>
+                </div>
+                <div class="d-flex flex-row justify-content-around my-4 mx-5">
+                    <p>following {{following_count}}</p>
+                    <p>followers {{followers_count}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex flex-column overflow-auto" style="height:750px; width:700px;" >
+        {% for tweet in tweets reversed%}
+        <div class="card rounded shadow">
+          <div class="card-header">
+            <div class="d-flex justify-content-start">
+              <div class="d-flex align-items-start">
+                <img class="rounded-circle" src="{{tweet.user.profile_picture_path.url}}" style="width:50px; height:50px;"/>
+                <div class="mx-3">
+                  <h5 class="m-0">{{tweet.user.username}}</h5>
+                  <p class="m-0">{{tweet.timestamp|timesince}}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="d-flex flex-row">
+              <p>{{tweet.text}}</p>
+            </div>
+            <img src="{{tweet.image.url}}" style="width:100%;"/>
+          </div>
+          <div class="card-footer">
+            <div class="d-flex post-actions">
 
-<div class="card shadow" style="width:600px; height:715px;">
-<h1>what the fuck man </h1>
+
+              <form method="post" action="{% url 'buttons_clicked' pk=tweet.tweet_id %}" class="d-flex flex-row">
+                {% csrf_token %}
+                <div class="d-flx" id="like-button">
+                  <button
+                    type="submit"
+                    class="btn btn-link d-flex align-items-center text-muted mx-4"
+                    name="like_button_{{tweet.tweet_id}}"
+                    value="{{tweet.tweet_id}}"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="feather feather-heart icon-md mb-0"
+                      id="like-button"
+                    >
+                      <path
+                        d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
+                      ></path>
+                    </svg>
+                    <p class="d-none d-md-block mx-1 my-2">Like</p>
+                  </button>
+                </div>
+
+                <div class="d-flx" id="like-button">
+                  <button
+                    type="button"
+                    class="btn btn-link d-flex align-items-center text-muted mx-4"
+                    name="comment_button_{{tweet.tweet_id}}"
+                    data-toggle="modal" 
+                    data-target="#myModal"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="feather feather-message-square icon-md mb-0"
+                    >
+                      <path
+                        d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
+                      ></path>
+                    </svg>
+                    <p class="d-none d-md-block mx-1 my-2">Comment</p>
+                  </button>
+                </div>
+
+                <div class="d-flx" id="like-button">
+                  <button
+                    type="button"
+                    class="btn btn-link d-flex align-items-center text-muted mx-4"
+                    name="share_button_{{tweet.tweet_id}}"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="feather feather-share icon-md mb-0"
+                    >
+                      <path
+                        d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"
+                      ></path>
+                      <polyline points="16 6 12 2 8 6"></polyline>
+                      <line x1="12" y1="2" x2="12" y2="15"></line>
+                    </svg>
+                    <p class="d-none d-md-block mx-1 my-2">Share</p>
+                  </button>
+                </div>
+              </form>
+
+
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+
 </div>
-
 {% endblock %}
