now the liking function fully works and the html will show the likes of each user to them

--- a/tweet_app/templates/tweet_app/home.html
+++ b/tweet_app/templates/tweet_app/home.html
@@ -154,37 +154,67 @@
               <div class="d-flex post-actions">
 
 
-              
-                
-                <div class="d-flx" id="like-button">
-                  <button
-                    type="submit"
-                    class="btn btn-link d-flex align-items-center text-muted mx-4"
-                    name="like_button_{{tweet.tweet_id}}"
-                    value="{{tweet.tweet_id}}"
-                  >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="24"
-                      height="24"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-heart icon-md mb-0"
-                      id="like-button"
+                <form action="{% url 'like_post' %}" method="post">
+                  {% csrf_token %}
+                  <div class="d-flx" id="like-button-div">
+                    <button
+                      type="submit"
+                      class="btn btn-link d-flex align-items-center text-muted mx-4"
+                      name="like-button"
+                      value="{{tweet.tweet_id}}"
+                      id="{{ tweet.tweet_id }}"
                     >
-                      <path
-                        d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
-                      ></path>
-                    </svg>
-                    <p class="d-none d-md-block mx-1 my-2">Like</p>
-                  </button>
-                </div>
+                      <input name="user_id" value="{{request.user.id}}" type="hidden">
+                      <input name="tweet_id" value="{{tweet.tweet_id}}" type="hidden">
 
-                <div class="d-flx" id="like-button">
+                      {% if tweet.tweet_id in liked_tweets %}
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="red"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-heart icon-md mb-0"
+                          id="svg"
+                        >
+                        
+                        <path
+                          d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
+                        ></path>
+                        </svg>
+                      {% else %}
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-heart icon-md mb-0"
+                          id="svg"
+                        >
+                        
+                        <path
+                          d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
+                        ></path>
+                        </svg>
+                      {% endif %}
+                      <p class="d-none d-md-block mx-1 my-2">Like</p>
+                    </button>
+                  </div>
+                </form>
+
+
+
+
+                <div class="d-flx" id="like-button-div">
                   <button
                     type="button"
                     class="btn btn-link d-flex align-items-center text-muted mx-4"
