--- a/tweet_app/templates/tweet_app/home.html
+++ b/tweet_app/templates/tweet_app/home.html
@@ -40,7 +40,7 @@
 
 
             <div class="d-flex align-items-start mt-5 mb-4">
-              <img class="rounded-circle" src="{{request.user.profile_picture_path.url}}" style="width:85px;"/>
+              <img class="rounded-circle" src="{{request.user.profile_picture_path.url}}" style="width:85px; height:85px;"/>
               <div class="mx-3">
                 <h5 class="mt-3">{{request.user.username}}</h5>
                 <p class="m-0">{{request.user.email}}</p>
@@ -61,7 +61,7 @@
                 <a href="{% url 'profile_page' %}" class="text-muted text-decoration-none">profile</a>
               </h3>
             </div>
-            <div class="d-flex justify-content-start align-items-start my-4">
+            <div class="d-flex justify-content-start align-items-start my-4 mx-3">
                 <button
                 type="button"
                 class="btn btn-primary"
@@ -349,15 +349,30 @@
 
         {% endblock%}
 
-        <div class="card rounded shadow" style="height:705px; width:300px;">
-          <div class="d-flex flex-column shadow">
-            <div class="d-flex flex-column shadow">
-              <h1>what the fuck man </h1>
+        <div class="card rounded shadow" style="height:705px; width:310px;">
+          <div class="d-flex flex-column ">
+
+            <div class="d-flex flex-column ">
+              {% for recom in recoms %}
+                
+                  <div class="d-flex flex-row my-3 justify-content-between">
+                    <div class="d-flex flex-row align-items-center justify-content-between">
+                      <img class="rounded-circle mx-3" src="{{recom.profile_picture_path.url}}" style="width:50px; height:50px;" alt="defualt"/>
+                      <div class="d-flex flex-column" style="width:140px;">
+                        <h6 class="mx-2 my-0">{{recom.name}}</h6>
+                        <p class="text-muted mx-2 my-0">{{recom.username}}</p>
+                      </div>
+                      <div class="d-flex">
+                        <div class="btn btn-primary">
+                          Follow
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <hr>
+                  {% endfor %}  
             </div>
-            <div class="d-flex flex-column shadow">
-              <h1>this is so good man </h1>
-              <button onclick="showCommentModal()">Click me!</button>
-            </div>
+
           </div>
         </div>
       </div>
