--- a/tweet_app/templates/tweet_app/home.html
+++ b/tweet_app/templates/tweet_app/home.html
@@ -354,23 +354,26 @@
 
             <div class="d-flex flex-column ">
               {% for recom in recoms %}
-                
+                <form method="post" id="follow-request-{{recom.id}}"  action="{% url 'send_follow_request' %}">
+                  {% csrf_token %}
                   <div class="d-flex flex-row my-3 justify-content-between">
                     <div class="d-flex flex-row align-items-center justify-content-between">
                       <img class="rounded-circle mx-3" src="{{recom.profile_picture_path.url}}" style="width:50px; height:50px;" alt="defualt"/>
                       <div class="d-flex flex-column" style="width:140px;">
                         <h6 class="mx-2 my-0">{{recom.name}}</h6>
                         <p class="text-muted mx-2 my-0">{{recom.username}}</p>
+                        <input type="hidden" name="user_id" value="{{recom.id}}">
                       </div>
                       <div class="d-flex">
-                        <div class="btn btn-primary">
+                        <button type="submit" class="btn btn-primary">
                           Follow
-                        </div>
+                        </button>
                       </div>
                     </div>
                   </div>
-                  <hr>
-                  {% endfor %}  
+                </form>
+                <hr>
+              {% endfor %}  
             </div>
 
           </div>
