now the web app is some how ready for the mobile phones

--- a/tweet_app/templates/tweet_app/home.html
+++ b/tweet_app/templates/tweet_app/home.html
@@ -3,7 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Three Vertical Sections with Lines and Colors</title>
     <!-- Include Bootstrap CSS via CDN -->
     <link
@@ -25,6 +26,36 @@
         color: red;
       }
 
+      body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height:100vh;
+    }
+
+    #navbarToggleExternalContent {
+      width: 250px; /* Set the width of the collapsed content */
+      position: fixed;
+      top: 0;
+      left: -250px; /* Initially hidden to the left */
+      height: 100%;
+      background: #333;
+      transition: left 0.3s;
+      z-index: 100;
+    }
+
+
+    #navbarToggleExternalContent.show {
+      left: 0; /* Display the content on button click */
+    }
+
+
+    @media screen and (max-width: 768px) {
+      #uniqueDiv {
+        height: 100vw; /* Adjust width for screens below 768px */
+      }
+    }
+
       /* .scroll {
         height:450px;
         overflow-y: scroll;
@@ -33,14 +64,57 @@
 
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid p-0" style="height:100vh; width:100%;">
+
+
+      <div class="pos-f-t">
+        <div class="collapse" id="navbarToggleExternalContent">
+          <div class="p-4 mt-5" style="z-index: 2;">
+
+            
+            <div class="d-flex align-items-start mt-5 mb-4" style="z-index: 3;">
+              <img class="rounded-circle mx-3" src="{{request.user.profile_picture_path.url}}" style="width:100px; height:100px;"/>
+              <!-- <div class="mx-3">
+                <h5 class="mt-3">{{request.user.username}}</h5>
+                <p class="m-0">{{request.user.email}}</p>
+              </div> -->
+            </div>
+
+            <div class="d-flex flex-column mx-4 my-3 " style="z-index: 3;">
+              <h4>
+                <a href="{% url 'home_page' %}" class=" text-decoration-none"  style="color:white;">Home</a>
+              </h4>
+              <h4>
+                <a href="{% url 'home_page' %}" class=" text-decoration-none"  style="color:white;">trends</a>
+              </h4>
+              <h4>
+                <a href="{% url 'home_page' %}" class=" text-decoration-none" style="color:white;">explore</a>
+              </h4>
+              <h4>
+                <a href="{% url 'profile_page' %}" class="text-decoration-none" style="color:white;">profile</a>
+              </h4>
+            </div>
+            
+
+
+          </div>
+        </div>
+        <nav class="navbar navbar-dark bg-dark d-md-none">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" style="z-index: 100;">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </nav>
+      </div>
+
+
       <div class="d-flex flex-row justify-content-center">
-        <div class="card shadow rounded align-items-center" style="width: 300px; height:500px;">
-          <div class="d-flex flex-column justify-content-center ">
+
+        <div class="card d-none d-md-block shadow rounded align-items-center" style="width: 300px; height:500px;">
+          <div class="d-flex d-none d-md-block flex-column justify-content-center ">
 
 
             <div class="d-flex align-items-start mt-5 mb-4">
-              <img class="rounded-circle" src="{{request.user.profile_picture_path.url}}" style="width:85px; height:85px;"/>
+              <img class="rounded-circle mx-3" src="{{request.user.profile_picture_path.url}}" style="width:85px; height:85px;"/>
               <div class="mx-3">
                 <h5 class="mt-3">{{request.user.username}}</h5>
                 <p class="m-0">{{request.user.email}}</p>
@@ -287,6 +361,7 @@
 
 
                         <form method="post" id="comment-form-{{tweet.tweet_id}}" action="{% url 'send_comment' %}">
+                          {% csrf_token %}
                           <div class="modal-body">
                             <div class="form-group">
                               <label for="message-text" class="col-form-label">Message:</label>
@@ -351,8 +426,8 @@
         {% endblock%}
 
         
-        <div class="card rounded shadow" style="height:705px; width:310px;">
-          <div class="d-flex flex-column ">
+        <div class="card d-none d-md-block rounded shadow" style="height:705px; width:310px;">
+          <div class="d-flex d-none d-md-block flex-column ">
 
             <div class="d-flex flex-column ">
               {% for recom in recoms %}
